--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "vue-calendar-board",
   "version": "1.0.0",
   "description": "vue日历面板组件",
-  "main": "index.js",
+  "main": "src/index.js",
   "files": [
     "src"
   ],
@@ -24,5 +24,8 @@
   "homepage": "https://github.com/AliSnowaroma/vue-calendar-board#readme",
   "dependencies": {
     "moment": "^2.24.0"
+  },
+  "devDependencies": {
+    "vue-calendar-board": "^1.0.0"
   }
 }
